[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 642.0
margin_bottom = 363.0
mouse_filter = 2

[node name="Label" type="Label" parent="Panel"]
margin_left = 296.0
margin_top = 19.0
margin_right = 353.0
margin_bottom = 36.0
rect_scale = Vector2( 0.8, 0.8 )
text = "fps"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 22.0
margin_top = 33.0
margin_right = 342.0
margin_bottom = 213.0
color = Color( 0, 0, 0, 1 )

[node name="Tree" type="Tree" parent="."]
margin_left = 22.0
margin_top = 221.0
margin_right = 342.0
margin_bottom = 345.0
allow_reselect = true

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 359.0
margin_top = 8.0
margin_right = 622.0
margin_bottom = 345.0

[node name="Layer" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 200, 105 )

[node name="Open" type="Button" parent="TabContainer/Layer" groups=["buttons"]]
margin_left = 145.0
margin_top = 36.0
margin_right = 236.0
margin_bottom = 56.0
text = "Open"

[node name="Panel" type="Panel" parent="TabContainer/Layer"]
margin_left = 9.0
margin_top = 33.0
margin_right = 142.0
margin_bottom = 110.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/Layer"]
margin_left = 11.0
margin_top = 35.0
margin_right = 331.0
margin_bottom = 215.0
rect_scale = Vector2( 0.4, 0.4 )
stretch_mode = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Layer"]
margin_left = 70.0
margin_top = 3.0
margin_right = 236.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="TabContainer/Layer/LineEdit"]
margin_left = -59.0
margin_top = 5.0
margin_right = -17.0
margin_bottom = 19.0
text = "Name:"

[node name="FileDialog" type="FileDialog" parent="TabContainer/Layer/LineEdit"]
margin_left = -350.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 272.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer/"

[node name="Remove" type="Button" parent="TabContainer/Layer" groups=["buttons"]]
margin_left = 145.0
margin_top = 275.0
margin_right = 247.0
margin_bottom = 295.0
text = "Remove Layer"

[node name="Opacity" type="Label" parent="TabContainer/Layer"]
margin_left = 11.0
margin_top = 129.0
margin_right = 84.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 40 )
text = "Opacity"

[node name="Slider" type="HSlider" parent="TabContainer/Layer/Opacity"]
margin_left = 55.0
margin_right = 149.0
margin_bottom = 16.0
max_value = 1.01
step = 0.01
page = 0.01
value = 1.0
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Layer/Opacity/Slider"]
margin_left = 96.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
max_value = 1.01
step = 0.01
page = 0.01
value = 1.0

[node name="Distortion" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Distortion"]
margin_right = 256.0
margin_bottom = 305.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Distortion/ScrollContainer"]
margin_right = 73.0
margin_bottom = 360.0
custom_constants/separation = 16

[node name="Hdistort" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer"]
margin_right = 73.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Horizontal
Distortion"

[node name="XCheckBox" type="CheckBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Hdistort" groups=["checks"]]
margin_left = 103.0
margin_right = 127.0
margin_bottom = 24.0
__meta__ = {
"_edit_group_": true
}

[node name="Vdistort" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 73.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 40 )
text = "Vertical
Distortion"

[node name="XCheckBox" type="CheckBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Vdistort" groups=["checks"]]
margin_left = 106.0
margin_top = -2.0
margin_right = 130.0
margin_bottom = 22.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Vdistort/XCheckBox"]
margin_left = -16.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 20.0
text = "X"

[node name="YCheckBox2" type="CheckBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Vdistort" groups=["checks"]]
margin_left = 184.0
margin_top = -2.0
margin_right = 208.0
margin_bottom = 22.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Vdistort/YCheckBox2"]
margin_left = -16.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 20.0
text = "Y"

[node name="Amp" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 73.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 60 )
text = "Amplitude"

[node name="XSlider" type="HSlider" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp" groups=["sliders"]]
margin_left = 71.0
margin_top = -2.0
margin_right = 179.0
margin_bottom = 14.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp/XSlider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 186.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="YSlider" type="HSlider" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp" groups=["sliders"]]
margin_left = 71.0
margin_top = 26.0
margin_right = 179.0
margin_bottom = 42.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp/YSlider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="Freq" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 73.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 60 )
text = "Frequency "

[node name="XSlider" type="HSlider" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq" groups=["sliders"]]
margin_left = 71.0
margin_top = -2.0
margin_right = 179.0
margin_bottom = 14.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq/XSlider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="YSlider" type="HSlider" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq" groups=["sliders"]]
margin_left = 71.0
margin_top = 26.0
margin_right = 179.0
margin_bottom = 42.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq/YSlider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="Scale" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 73.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 40 )
text = "Scale"

[node name="Slider" type="HSlider" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Scale" groups=["sliders"]]
margin_left = 71.0
margin_top = 5.0
margin_right = 179.0
margin_bottom = 21.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Scale/Slider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="Interleaved" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 73.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 40 )
text = "Interleaved"

[node name="Xcheck" type="CheckBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Interleaved" groups=["checks"]]
margin_left = 122.0
margin_top = -5.0
margin_right = 146.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Interleaved/Xcheck"]
margin_left = -5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 19.0
text = "X"

[node name="Ycheck" type="CheckBox" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Interleaved" groups=["checks"]]
margin_left = 186.0
margin_top = -5.0
margin_right = 210.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="TabContainer/Distortion/ScrollContainer/VBoxContainer/Interleaved/Ycheck"]
margin_left = -5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 19.0
text = "y
"

[node name="Effects" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Effects"]
margin_right = 256.0
margin_bottom = 551.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Effects/ScrollContainer"]
margin_right = 70.0
margin_bottom = 265.0
custom_constants/separation = 16

[node name="Move" type="Label" parent="TabContainer/Effects/ScrollContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 60 )
text = "
Move"

[node name="XSlider" type="HSlider" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Move" groups=["sliders"]]
margin_left = 71.0
margin_top = 5.0
margin_right = 179.0
margin_bottom = 21.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Move/XSlider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="YSlider" type="HSlider" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Move" groups=["sliders"]]
margin_left = 71.0
margin_top = 33.0
margin_right = 179.0
margin_bottom = 49.0
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Move/YSlider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
min_value = -10.0
max_value = 10.0
step = 0.1
page = 0.1

[node name="Ping" type="Label" parent="TabContainer/Effects/ScrollContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 70.0
margin_bottom = 106.0
rect_min_size = Vector2( 70, 30 )
text = "Ping pong"

[node name="CheckBox" type="CheckBox" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Ping" groups=["checks"]]
margin_left = 73.0
margin_top = -4.0
margin_right = 97.0
margin_bottom = 20.0

[node name="PalSft" type="Label" parent="TabContainer/Effects/ScrollContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 70.0
margin_bottom = 153.0
rect_min_size = Vector2( 70, 30 )
text = "Pallette
Shift"

[node name="CheckBox" type="CheckBox" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/PalSft" groups=["checks"]]
margin_left = 73.0
margin_top = -4.0
margin_right = 97.0
margin_bottom = 20.0

[node name="Pal" type="Label" parent="TabContainer/Effects/ScrollContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 70.0
margin_bottom = 209.0
rect_min_size = Vector2( 70, 40 )
text = "Palette"

[node name="TextureRect" type="TextureRect" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Pal"]
margin_left = 68.0
margin_top = -4.0
margin_right = 187.0
margin_bottom = 30.0
expand = true
stretch_mode = 1

[node name="Button" type="Button" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/Pal/TextureRect" groups=["buttons"]]
margin_left = 124.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 27.0
text = "Open"

[node name="PalSpd" type="Label" parent="TabContainer/Effects/ScrollContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 70.0
margin_bottom = 265.0
rect_min_size = Vector2( 70, 40 )
text = "Palette
Speed"

[node name="Slider" type="HSlider" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/PalSpd" groups=["sliders"]]
margin_left = 71.0
margin_top = 5.0
margin_right = 179.0
margin_bottom = 21.0
min_value = -5.0
max_value = 5.0
step = 0.1
page = 0.1
scrollable = false

[node name="LineEdit" type="SpinBox" parent="TabContainer/Effects/ScrollContainer/VBoxContainer/PalSpd/Slider"]
margin_left = 112.0
margin_top = -5.0
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 24 )
step = 0.1
page = 0.1

[node name="palFileDialog" type="FileDialog" parent="TabContainer/Effects"]
margin_left = -308.0
margin_top = 6.0
margin_right = 226.0
margin_bottom = 272.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer/"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 22.0
margin_top = 4.0
margin_right = 226.0
margin_bottom = 24.0

[node name="NewBG" type="Button" parent="HBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "New BG"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="HBoxContainer/NewBG"]
margin_left = 146.0
margin_top = 88.0
margin_right = 346.0
margin_bottom = 158.0
dialog_text = "You sure you wanna make a new BG?"

[node name="Save" type="Button" parent="HBoxContainer"]
margin_left = 67.0
margin_right = 108.0
margin_bottom = 20.0
text = "Save"

[node name="Open" type="Button" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 159.0
margin_bottom = 20.0
text = "Open"

[node name="New" type="Button" parent="HBoxContainer"]
margin_left = 163.0
margin_right = 241.0
margin_bottom = 20.0
text = "New Layer"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 55.0
margin_top = 22.0
margin_right = 571.0
margin_bottom = 315.0
window_title = "Save Background"
resizable = true
access = 2
filters = PoolStringArray( "*.ebg" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer/"

[node name="FileDialog2" type="FileDialog" parent="."]
margin_left = 55.0
margin_top = 22.0
margin_right = 571.0
margin_bottom = 315.0
window_title = "Open Background"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.ebg" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/Distortionizer/"

[connection signal="cell_selected" from="Tree" to="." method="_on_Tree_cell_selected"]
[connection signal="pressed" from="TabContainer/Layer/Open" to="." method="_on_imageOpen_pressed"]
[connection signal="text_changed" from="TabContainer/Layer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="file_selected" from="TabContainer/Layer/LineEdit/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="TabContainer/Layer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="value_changed" from="TabContainer/Layer/Opacity/Slider" to="." method="_on_Opacity_value_changed"]
[connection signal="value_changed" from="TabContainer/Layer/Opacity/Slider/LineEdit" to="." method="_on_AlphaLineEdit_value_changed"]
[connection signal="pressed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Hdistort/XCheckBox" to="." method="_on_XCheckBox_pressed"]
[connection signal="pressed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Vdistort/XCheckBox" to="." method="_on_VDXCheckBox_pressed"]
[connection signal="pressed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Vdistort/YCheckBox2" to="." method="_on_VDYCheckBox_pressed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp/XSlider" to="." method="_on_AmpXSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp/XSlider/LineEdit" to="." method="_on_ampxLineEdit_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp/YSlider" to="." method="_on_ampYSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Amp/YSlider/LineEdit" to="." method="_on_ampyLineEdit_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq/XSlider" to="." method="_on_frqXSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq/XSlider/LineEdit" to="." method="_on_freqxLineEdit_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq/YSlider" to="." method="_on_frqYSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Freq/YSlider/LineEdit" to="." method="_on_freqyLineEdit_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Scale/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Scale/Slider/LineEdit" to="." method="_on_LineEdit_value_changed"]
[connection signal="pressed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Interleaved/Xcheck" to="." method="_on_itlXcheck_pressed"]
[connection signal="pressed" from="TabContainer/Distortion/ScrollContainer/VBoxContainer/Interleaved/Ycheck" to="." method="_on_itlYcheck_pressed"]
[connection signal="value_changed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/Move/XSlider" to="." method="_on_mveXSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/Move/XSlider/LineEdit" to="." method="_on_moveLineEdit_value_changed"]
[connection signal="value_changed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/Move/YSlider" to="." method="_on_moveYSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/Move/YSlider/LineEdit" to="." method="_on_moveyLineEdit_value_changed"]
[connection signal="pressed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/Ping/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/PalSft/CheckBox" to="." method="_on_palCheckBox_pressed"]
[connection signal="pressed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/Pal/TextureRect/Button" to="." method="_on_palButton_pressed"]
[connection signal="value_changed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/PalSpd/Slider" to="." method="_on_palSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Effects/ScrollContainer/VBoxContainer/PalSpd/Slider/LineEdit" to="." method="_on_palLineEdit_value_changed"]
[connection signal="file_selected" from="TabContainer/Effects/palFileDialog" to="." method="_on_palFileDialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/NewBG" to="." method="_on_NewBG_pressed"]
[connection signal="confirmed" from="HBoxContainer/NewBG/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="HBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_OpenFileDialog_file_selected"]
